add Contact Page

--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="css/style2.css" />
 
-    <title>SabzLearn | Js | 120</title>
+    <title>Pidaret2</title>
   </head>
 
   <body>
