added the menu code and the preparation of weather codes

--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="css/style2.css" />
 
-    <title>Pidaret2</title>
+    <title>Pidaret</title>
   </head>
 
   <body>
@@ -29,10 +29,10 @@
         <input class="emailInput" placeholder="Email" />
       </div>
       <div class="col-md-6 box">
-        <select class="countrySelect" onchange="countrySelectFunction()">
+        <select class="countrySelect">
           <option value="Please Select">Please Select ...</option>
           <option class="option" value="Iran">Iran</option>
-          <option class="option" value="Canada">Canada</option>
+          <option class="option" value="Turkey">Turkey</option>
           <option class="option" value="US">United State</option>
         </select>
       </div>
