--- a/indexMenu.html
+++ b/indexMenu.html
@@ -7,19 +7,31 @@
     <link rel="stylesheet" href="css/styleMenu.css" />
 </head>
 <body>
+
     <h1>Blacker site</h1>
 
 <nav>
 	<a href="#">Home</a>
 	<a href="index.html" class="a2" target="_blank">Log In & Sigh Up</a>
-	<a href="index3.html" target="_blank">Weather</a> 
+	<a href="index3.html" target="_blank">Weather</a>
 	<a href="#" target="_blank">Portefolio</a>
 	<a href="#" target="_blank">Contact</a>
 	<div class="animation start-home"></div>
 </nav>
+<div class="divBox">
+<box></box>
+<input type="text" class="input"/>
+</div>
 
-<p>
+<canvas id="canvas">Canvas not supported.</canvas>
+<ul id="navigation">
+  <li>Please keep moving the mouse.</li>
+  <p>
   By <span>Blacker</span>
-</p>
+  </p>
+</ul>
+
+<script src="js/scriptMenu.js"></script>
+
 </body>
 </html>
