placeholder= Enter number or color

--- a/indexMenu.html
+++ b/indexMenu.html
@@ -20,7 +20,7 @@
 </nav>
 <div class="divBox">
 <box></box>
-<input type="text" class="input"/>
+<input type="text" class="input" placeholder=" Enter number or color"/>
 </div>
 
 <canvas id="canvas">Canvas not supported.</canvas>
