I found the bug and fixed it

--- a/indexMenu.html
+++ b/indexMenu.html
@@ -12,7 +12,7 @@
 
 <nav>
 	<a href="#">Home</a>
-	<a href="index.html" class="a2" target="_blank">Log In & Sigh Up</a>
+	<a href="index.html" class="a2" target="_blank">Log In</a>
 	<a href="index3.html" target="_blank">Weather</a>
 	<a href="#" target="_blank">Portefolio</a>
 	<a href="#" target="_blank">Contact</a>
