--- a/index3.html
+++ b/index3.html
@@ -7,6 +7,9 @@
   <title>pidaret</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style3.css">
 </head>
 
@@ -33,6 +36,19 @@ background-size: cover;" id="B1">
       <div class="wind">Wind speed: 6.2 km/h</div>
     </div>
   </div>
+
+  <div id="contextMenu" class="context-menu" style="display: none;">
+    <ul class="menu">
+        <li class="share"><a href="#" class="fist_a"><i class="fa fa-share" aria-hidden="true"></i> Share</a></li>
+        <li class="rename"><a href="#"><i class="fa fa-pencil" aria-hidden="true"></i> Rename</a></li>
+        <li class="link"><a href="#"><i class="fa fa-link" aria-hidden="true"></i> Copy Link Address</a></li>
+        <li class="copy"><a href="#"><i class="fa fa-copy" aria-hidden="true"></i> Copy to</a></li>
+        <li class="paste"><a href="#"><i class="fa fa-paste" aria-hidden="true"></i> Move to</a></li>
+        <li class="download"><a href="#"><i class="fa fa-download" aria-hidden="true"></i> Download</a></li>
+        <li class="trash"><a href="#" class="last_a"><i class="fa fa-trash" aria-hidden="true"></i> Delete</a></li>
+    </ul>
+  </div>
+
   <script src="js/script3.js" defer></script>
 </body>
 
