I have completed the Modal project

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-
+    <section>
     <div class="login-page">
         <box class="box" id="title">
             <lomp class="lomp" id="lomp"></lomp>
@@ -39,7 +39,7 @@
                         </div>
 
                                 <button onclick="dataValidation()">login</button>
-                            <p class="message">Not registered? <a href="index2.html" target="_blank">Create an account</a></p>
+                            <p class="message">Not registered? <a href="index2.html" target="_blank">Create an account</a><button type="button" style="  width: 56px;font-size: 12px;height: 19px;padding: 0px;margin-left: 5px;">Rules</button></p>
                         </div>
                  </div>
             </dddd>
@@ -47,6 +47,15 @@
     <div class="modal">
         <p1>please submit your  information correctly</p1>
     </div>
+</section>
+    <div class="modal-parent">
+        <div id="modal">
+          <p>
+            The first law: There is no law 💀
+          </p>
+          <span class="X">&times;</span>
+        </div>
+      </div>
 
     <script src="js/script.js"></script>
 
