I have completed the NoteBook project

--- a/indexMenu.html
+++ b/indexMenu.html
@@ -17,7 +17,7 @@
 	<a href="#">Home</a>
 	<a href="index.html" class="a2" target="_blank">Log In</a>
 	<a href="index3.html" target="_blank">Weather</a>
-	<a href="#" target="_blank">Portefolio</a>
+	<a href="indexNoteBook.html" target="_blank">Note Book</a>
 	<a href="#" target="_blank">Contact</a>
 	<div class="animation start-home"></div>
 </nav>
