--- a/indexMenu.html
+++ b/indexMenu.html
@@ -14,7 +14,7 @@
     <h1>Blacker site</h1>
 
 <nav>
-	<a href="#">Home</a>
+	<a href="indexPlayer.html">Player</a>
 	<a href="index.html" class="a2" target="_blank">Log In</a>
 	<a href="index3.html" target="_blank">Weather</a>
 	<a href="indexNoteBook.html" target="_blank">Note Book</a>
