I have completed the dark / light mode project index but it is not completed for indexMenu and indexNoteBook

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 </head>
 
 <body>
+    <header>
+        <div class="switch">
+          <div class="flicker"></div>
+          <div class="moon"></div>
+          <div class="sun"></div>
+        </div>
+      </header>
     <section>
     <div class="login-page">
         <box class="box" id="title">
