--- a/indexMenu.html
+++ b/indexMenu.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+  <header>
+    <div class="switch">
+      <div class="flicker"></div>
+      <div class="moon"></div>
+      <div class="sun"></div>
+    </div>
+  </header>
 
     <h1>Blacker site</h1>
 
