I have completed the dark/light mode project

--- a/indexNoteBook.html
+++ b/indexNoteBook.html
@@ -11,7 +11,14 @@
   <title>1010101?</title>
 </head>
 
-<body>
+<body class="dark">
+  <header>
+    <div class="switch">
+      <div class="flicker"></div>
+      <div class="moon"></div>
+      <div class="sun"></div>
+    </div>
+  </header>
   <div>
 
     <!-- INPUT -->
