I have completed the BMI Test project

--- a/indexMenu.html
+++ b/indexMenu.html
@@ -18,10 +18,19 @@
     </div>
   </header>
 
+  <div class="mbi">
+    <span class="X">&times;</span>
+      <a href="indexBMI.html" target="_blank" class="MBIa">
+
+      free <MBi>MBi</MBi> test
+      <image class="mbiImg"></image>
+    </a>
+  </div>
+
     <h1>Blacker site</h1>
 
 <nav>
-	<a href="indexPlayer.html">Player</a>
+	<a href="indexPlayer.html" target="_blank">Player</a>
 	<a href="index.html" class="a2" target="_blank">Log In</a>
 	<a href="index3.html" target="_blank">Weather</a>
 	<a href="indexNoteBook.html" target="_blank">Note Book</a>
