I have completed the profile Dynamic Change Theme project

--- a/indexMenu.html
+++ b/indexMenu.html
@@ -8,15 +8,62 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body class="dark">
-  <header>
-    <div class="switch">
-      <div class="flicker"></div>
-      <div class="moon"></div>
-      <div class="sun"></div>
+  <div class="modal-parent">
+      <div class="container">
+        <span class="XProfile">&times;</span>
+        <div class="card">
+            <img src="image/Blacker.jpg" alt="profile_img" class="ImgPr">
+            <h4>Emily Fisher</h4>
+            <h5>Senior Web Developer</h5>
+            <div class="details">
+                <div class="column">
+                    <h2>1.6K</h2>
+                    <span>Followers</span>
+                </div>
+                <div class="column">
+                    <h2>852</h2>
+                    <span>Following</span>
+                </div>
+            </div>
+            <div class="buttons">
+                <button>Follow</button>
+                <button>Message</button>
+            </div>
+            <div class="themes">
+              <button class="btn btn1" data-color="#3498db"></button>
+              <button class="btn btn2" data-color="#ff1756"></button>
+              <button class="btn btn3" data-color="#1cb65d"></button>
+              <button class="btn btn4" data-color="#8e44ad"></button>
+              <button class="btn btn5" data-color="#f4b932"></button>
+          </div>
+        </div>
+
     </div>
-  </header>
+  </div>
+<section>
+
+  <nav id="mainNav">
+    <h1>Blacker site</h1>
+      <header class="headerProfile">
+        <div class="profile">
+          <div class="border"></div>
+          <div class="headProfile"></div>
+          <div class="bodyProfile"></div>
+        </div>
+      </header>
+      <header>
+        <div class="switch">
+          <div class="flicker"></div>
+          <div class="moon"></div>
+          <div class="sun"></div>
+        </div>
+      </header>
+  </nav>
+
 
   <div class="mbi">
     <span class="X">&times;</span>
@@ -27,7 +74,6 @@
     </a>
   </div>
 
-    <h1>Blacker site</h1>
 
 <nav>
 	<a href="indexPlayer.html" target="_blank">Player</a>
@@ -61,6 +107,8 @@
       <li class="trash"><a href="#" class="last_a"><i class="fa fa-trash" aria-hidden="true"></i> Delete</a></li>
   </ul>
 </div>
+</section>
+
 
 <script src="js/scriptMenu.js"></script>
 
