I found the bug and fixed it

--- a/indexMenu.html
+++ b/indexMenu.html
@@ -17,7 +17,7 @@
         <span class="XProfile">&times;</span>
         <div class="card">
             <img src="image/Blacker.jpg" alt="profile_img" class="ImgPr">
-            <h4>Emily Fisher</h4>
+            <h4>Parsa Farivash</h4>
             <h5>Senior Web Developer</h5>
             <div class="details">
                 <div class="column">
