I have completed the Custom Scoroll & Sticky NavBar project

--- a/indexMenu.html
+++ b/indexMenu.html
@@ -47,7 +47,7 @@
 <section>
 
   <nav id="mainNav">
-    <h1>Blacker site</h1>
+    <h1 class="h1Blacker">Blacker site</h1>
       <header class="headerProfile">
         <div class="profile">
           <div class="border"></div>
@@ -63,6 +63,7 @@
         </div>
       </header>
   </nav>
+  <div class="scroll"></div>
 
 
   <div class="mbi">
@@ -107,6 +108,7 @@
       <li class="trash"><a href="#" class="last_a"><i class="fa fa-trash" aria-hidden="true"></i> Delete</a></li>
   </ul>
 </div>
+<div class="nothing"></div>
 </section>
 
 
