I found the bug and fixed it

--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/solid.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Pidaret</title>
@@ -17,52 +14,52 @@
 <body>
     <header>
         <div class="switch">
-          <div class="flicker"></div>
-          <div class="moon"></div>
-          <div class="sun"></div>
+            <div class="flicker"></div>
+            <div class="moon"></div>
+            <div class="sun"></div>
         </div>
-      </header>
+    </header>
     <section>
-    <div class="login-page">
-        <box class="box" id="title">
-            <lomp class="lomp" id="lomp"></lomp>
-        </box>
-                <dddd class="center">
-                    <div class="form">
-                            <p class="pI"><img src="C:\Users\Parisa\OneDrive\Desktop\Blacker.js\image\363639-200.png" alt="IMG" class="img1"></p>
-                            <form action="#" class="form1">
-                                <input type="text" placeholder="username" class="username" id="username"  onblur="usernameValidation()"spellcheck="false" maxlength="19" required />
-                                <i class="uis uis-at"></i>
-                                <span class="counter">19</span></form>
-                                <span class="username-validation">At least 13 characters</span>
-                            <div class="form-element">
-                                <input type="password" placeholder=" password" class="password"  id="password-field"  onblur="passwordValidation()" />
-                                <span class="password-validation">At least 8 characters</span>
-                                <div class="toggle-password">
-                                <i class="fa fa-eye"></i>
-                                <i class="fa fa-eye-slash"></i>
+        <div class="login-page">
+            <box class="box" id="title">
+                <lomp class="lomp" id="lomp"></lomp>
+            </box>
+            <dddd class="center">
+                <div class="form">
+                    <p class="pI"><img src="image/363639-200.png" alt="IMG" class="img1"></p>
+                    <form action="#" class="form1">
+                        <input type="text" placeholder="username" class="username" id="username" onblur="usernameValidation()" spellcheck="false" maxlength="19" required />
+                        <i class="uis uis-at"></i>
+                        <span class="counter">19</span></form>
+                    <span class="username-validation">At least 13 characters</span>
+                    <div class="form-element">
+                        <input type="password" placeholder=" password" class="password" id="password-field" onblur="passwordValidation()" />
+                        <span class="password-validation">At least 8 characters</span>
+                        <div class="toggle-password">
+                            <i class="fa fa-eye"></i>
+                            <i class="fa fa-eye-slash"></i>
 
-                            </div>
                         </div>
+                    </div>
 
-                                <button onclick="dataValidation()">login</button>
-                            <p class="message">Not registered? <a href="index2.html" target="_blank">Create an account</a><button type="button" style="  width: 56px;font-size: 12px;height: 19px;padding: 0px;margin-left: 5px;">Rules</button></p>
-                        </div>
-                 </div>
-            </dddd>
+                    <button onclick="dataValidation()">login</button>
+                    <p class="message">Not registered? <a href="index2.html" target="_blank">Create an account</a><button type="button" style="  width: 56px;font-size: 12px;height: 19px;padding: 0px;margin-left: 5px;">Rules</button></p>
+                </div>
+        </div>
+        </dddd>
 
-    <div class="modal">
-        <p1>please submit your  information correctly</p1>
-    </div>
-</section>
+        <div class="modal">
+            <p1>please submit your information correctly</p1>
+        </div>
+    </section>
     <div class="modal-parent">
         <div id="modal">
-          <p>
-            The first law: There is no law 💀
-          </p>
-          <span class="X">&times;</span>
+            <p>
+                The first law: There is no law 💀
+            </p>
+            <span class="X">&times;</span>
         </div>
-      </div>
+    </div>
 
     <script src="js/script.js"></script>
 
