completed the smig & new snake game project

--- a/indexSnake.html
+++ b/indexSnake.html
@@ -11,11 +11,25 @@
 </head>
 
 <body>
-    <div>
-        <h1 class="top">SNAKE</h1>
-        <canvas width="768" height="448"></canvas>
-        <h1 class="bottom">GAME</h1>
-    </div>
+    <div class="container noselect">
+        <div class="wrapper">
+          <button id="replay">
+            <i class="fas fa-play"></i>
+            RESTART
+          </button>
+          <div id="canvas">
+
+          </div>
+          <div id="ui">
+            <h2>SCORE
+            </h2>
+            <span id="score">00</span>
+          </div>
+        </div>
+        <div id="author">
+          <h1>SNAKE</h1> <span>by Fariat</span>
+        </div>
+      </div>
 
     <script src="assets/js/main.js"></script>
 </body>
