completed the miniGame part1 & 2 & particleSystm project

--- a/blackFoxGame/miniGame/miniGame.html
+++ b/blackFoxGame/miniGame/miniGame.html
@@ -9,8 +9,13 @@
 </head>
 
 <body>
-    <canvas id="collisionCanvas"></canvas>
     <canvas id="canvas1"></canvas>
+    <img id="player" src="../img/playerr.png">
+    <img id="layer1" src="../img/layer-1.png">
+    <img id="layer2" src="../img/layer-2.png">
+    <img id="layer3" src="../img/layer-3.png">
+    <img id="layer4" src="../img/layer-4.png">
+    <img id="layer5" src="../img/layer-5.png">
     <script type="module" src="js/miniGame.js"></script>
 </body>
 
