completed the miniGame part 3project

--- a/blackFoxGame/miniGame/miniGame.html
+++ b/blackFoxGame/miniGame/miniGame.html
@@ -16,6 +16,9 @@
     <img id="layer3" src="../img/layer-3.png">
     <img id="layer4" src="../img/layer-4.png">
     <img id="layer5" src="../img/layer-5.png">
+    <img id="enemy_fly" src="../img/enemy_fly.png">
+    <img id="enemy_plant" src="../img/enemy_plant.png">
+    <img id="enemy_spider_big" src="../img/enemy_spider_big.png">
     <script type="module" src="js/miniGame.js"></script>
 </body>
 
