completed the project

--- a/blackFoxGame/miniGame/miniGame.html
+++ b/blackFoxGame/miniGame/miniGame.html
@@ -19,6 +19,8 @@
     <img id="enemy_fly" src="../img/enemy_fly.png">
     <img id="enemy_plant" src="../img/enemy_plant.png">
     <img id="enemy_spider_big" src="../img/enemy_spider_big.png">
+    <img id="fire" src="../img/fire.png">
+    <img id="collisionAnimation" src="../img/boomm.png">
     <script type="module" src="js/miniGame.js"></script>
 </body>
 
